--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.studentapi</groupId>
     <artifactId>Student</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>Student</name>
     <description>Student</description>
     <properties>
@@ -70,6 +71,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>Student</finalName>
     </build>
 
 </project>
